# near-object-framework

windows/drivers/uwb/simulator/: CMakeLists.txt
windows/shared/logging/logging-plog-windows/: CMakeLists.txt
